codepkg/objects/Project_Closeout__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The actual project completion date based on OES closeout review of documentation.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjustment_s__c</fullName>
        <formula>Cal_OES_Recommended_Amount__c  -  FEMA_Obligated_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalOES_ID__c</fullName>
        <formula>Closeout_Request__r.Subrecipient__r.OES__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CalOES ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalOES_Project_Number__c</fullName>
        <formula>Project_Name__r.CalOES_Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CalOES Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cal_OES_Recommended_Amount__c</fullName>
        <label>Cal OES Recommended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closeout_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Closeout Request</label>
        <referenceTo>Closeout_Request__c</referenceTo>
        <relationshipLabel>Project Closeouts</relationshipLabel>
        <relationshipName>Project_Closeouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closeout_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closeout Task</label>
        <referenceTo>Closeout_Task__c</referenceTo>
        <relationshipLabel>Project Closeouts</relationshipLabel>
        <relationshipName>CloseOuts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>User remark or feedback on the record will be stored.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Damage_Type__c</fullName>
        <formula>IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;A: Debris Removal&quot;), &quot;Debris Removal &quot;,null)&amp;

IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;B: Emergency Protective Measures&quot;), &quot;Emergency Protective Measures &quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;C: Roads and Bridges&quot;), &quot;Roads and Bridges &quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;D: Water Control Facilities&quot;), &quot;Water Control Facilities &quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;E: Public Buildings and Contents&quot;), &quot;Public Buildings and Contents &quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;F: Public Utilities&quot;), &quot;Public Utilities &quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;G: Parks, Recreational and Other Facilities&quot;), &quot;Parks, Recreational and Other Facilities &quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;H: Fire Management&quot;), &quot;Fire Management &quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;Z: Management Costs&quot;), &quot;Management Costs&quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damage Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Inspected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date when the project was closed or inspected by an OES inspector.</inlineHelpText>
        <label>Date Inspected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Project_Marked_100_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Project Marked 100% Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Declaration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMMIE_Batch_Unique_No__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE( Project_Name__r.Latest_Project_Version__c , &apos;PW-&apos;, &apos;&apos;), &apos;DSR-&apos;, &apos;&apos;) &amp; &apos;-&apos; &amp;  Project_Name__r.Declaration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMMIE Batch Unique No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_NSPO__c</fullName>
        <formula>IF( AND(FIPS__c !=null,  CalOES_ID__c !=null),
Subrecipient__c+&quot;/&quot;+ FIPS__c +&quot;/&quot;+ CalOES_ID__c ,

IF( AND( FIPS__c !=null, CalOES_ID__c ==null),
Subrecipient__c+&quot;/&quot;+ FIPS__c ,

IF( AND( FIPS__c ==null, CalOES_ID__c !=null),
Subrecipient__c+&quot;/&quot;+CalOES_ID__c ,

IF( AND(FIPS__c ==null, CalOES_ID__c ==null),
 Subrecipient__c, Subrecipient__c
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Template NSPO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <formula>TEXT(Project_Name__r.Obligating_Sub_Recipient__r.Entity_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEMA_Obligated_Amount__c</fullName>
        <inlineHelpText>The current FEMA approved and obligated amount.</inlineHelpText>
        <label>FEMA Obligated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <formula>Project_Name__r.Obligating_Sub_Recipient__r.Sub_Recipient_FIPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIPS#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Id_For_Flow__c</fullName>
        <formula>CASESAFEID(Project_Name__r.Incident_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident Id For Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <formula>Project_Name__r.Incident_Name_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSmallProject__c</fullName>
        <formula>NOT(Project_Name__r.IsLargeProject__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsSmallProject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Last_Project__c</fullName>
        <formula>Project_Name__r.Is_Last_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Last Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Project_Version__c</fullName>
        <formula>Project_Name__r.Latest_Project_Version__c</formula>
        <label>Latest Project Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_To_Date__c</fullName>
        <formula>Project_Name__r.Percent_Complete_To_Date__c</formula>
        <label>Percent Complete To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Closeout_Number__c</fullName>
        <displayFormat>C-{00000}</displayFormat>
        <label>Project Closeout Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Completion_Date__c</fullName>
        <formula>Project_Name__r.Project_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Damage_Category__c</fullName>
        <formula>IF( INCLUDES( Project_Name__r.Damage_Category__c , &quot;A: Debris Removal&quot;), &quot;A &quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c , &quot;B: Emergency Protective Measures&quot;), &quot;B&quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c , &quot;C: Roads and Bridges&quot;), &quot;C&quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c , &quot;D: Water Control Facilities&quot;), &quot;D&quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c , &quot;E: Public Buildings and Contents&quot;), &quot;E&quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c , &quot;F: Public Utilities&quot;), &quot;F&quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c , &quot;G: Parks, Recreational and Other Facilities&quot;), &quot;G&quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c , &quot;H: Fire Management&quot;), &quot;H&quot;,null)
&amp;
IF( INCLUDES( Project_Name__r.Damage_Category__c  , &quot;Z: Management Costs&quot;), &quot;Z&quot;,null)</formula>
        <label>Project Damage Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>CloseOuts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project_Name__r.Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_PW__c</fullName>
        <formula>IF( ISBLANK(Project_Name__r.Latest_Project_Version__c)  == False  &amp;&amp;  ISNULL(Project_Name__r.Latest_Project_Version__c)  == false , 
 IF( CONTAINS(Project_Name__r.Latest_Project_Version__c, &apos;PW-&apos;) ,LEFT(SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;PW-&apos;, &apos;&apos;), (FIND(&apos;-&apos;, SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;PW-&apos;, &apos;&apos;))-1)),
IF( CONTAINS(Project_Name__r.Latest_Project_Version__c, &apos;PW &apos;) ,LEFT(SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;PW &apos;, &apos;&apos;), (FIND(&apos;-&apos;, SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;PW &apos;, &apos;&apos;))-1)),
IF(CONTAINS(Project_Name__r.Latest_Project_Version__c, &apos;DSR-&apos;), RIGHT(Project_Name__r.Latest_Project_Version__c,LEN(SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;DSR-&apos;, &apos;&apos;)) - FIND( &apos;-&apos;, SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;DSR-&apos;, &apos;&apos;))),
IF(CONTAINS(Project_Name__r.Latest_Project_Version__c, &apos;DSR &apos;), RIGHT(Project_Name__r.Latest_Project_Version__c,LEN(SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;DSR &apos;, &apos;&apos;)) - FIND( &apos;-&apos;, SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;DSR &apos;, &apos;&apos;))) ,&apos;&apos;)
))) ,
&apos;&apos;)</formula>
        <label>Project PW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <formula>IF( Project_Name__r.IsLargeProject__c  = True, &apos;L&apos;, &apos;S&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Version__c</fullName>
        <formula>IF( ISBLANK(Project_Name__r.Latest_Project_Version__c) == False &amp;&amp; ISNULL(Project_Name__r.Latest_Project_Version__c) == false , 

IF(CONTAINS(Project_Name__r.Latest_Project_Version__c, &apos;PW-&apos;), RIGHT(Project_Name__r.Latest_Project_Version__c,LEN(SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;PW-&apos;, &apos;&apos;)) - FIND( &apos;-&apos;, SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;PW-&apos;, &apos;&apos;)))
,
IF(CONTAINS(Project_Name__r.Latest_Project_Version__c, &apos;PW &apos;), RIGHT(Project_Name__r.Latest_Project_Version__c,LEN(SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;PW &apos;, &apos;&apos;)) - FIND( &apos;-&apos;, SUBSTITUTE(Project_Name__r.Latest_Project_Version__c, &apos;PW &apos;, &apos;&apos;))) ,&apos;&apos;)
)
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_by__c</fullName>
        <formula>Project_Completion_Date__c + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Declaration_Number__c</fullName>
        <formula>Project_Name__r.Incident_Name__r.State_Declaration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Declaration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request for Closeout</fullName>
                </value>
                <value>
                    <fullName>Request for Information</fullName>
                </value>
                <value>
                    <fullName>Ready for Closeout</fullName>
                </value>
                <value>
                    <fullName>Closeout In Progress</fullName>
                </value>
                <value>
                    <fullName>Closeout Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subrecipient_Id_For_Flow__c</fullName>
        <formula>CASESAFEID(Project_Name__r.Obligating_Sub_Recipient__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subrecipient Id For Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subrecipient__c</fullName>
        <formula>Project_Name__r.Obligating_Sub_Recipient__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subrecipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Claimed__c</fullName>
        <label>Total Amount Claimed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Award__c</fullName>
        <formula>Project_Name__r.Total_Project_Award__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Project Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Federal_Award__c</fullName>
        <formula>Project_Name__r.TotalProjectFederalAward__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Project Federal Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_State_Award__c</fullName>
        <formula>Project_Name__r.TotalProjectStateAward__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Project State Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project Closeout</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Closeout_Request__c</columns>
        <columns>Closeout_Task__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Project_Name__c</columns>
        <columns>IsSmallProject__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Public_Assistance_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marked_100_pending_a_CR_record</fullName>
        <columns>NAME</columns>
        <columns>Closeout_Request__c</columns>
        <columns>Closeout_Task__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Project_Number__c</columns>
        <columns>IsSmallProject__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closeout_Request__c</field>
            <operation>equals</operation>
        </filters>
        <label>Marked 100% pending a CR record</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Public_Assistance_Analyst_Project_Closeout</fullName>
        <columns>Closeout_Request__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Public Assistance Analyst</label>
        <queue>Public_Assistance_Analyst</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Public_Assistance_DAPS_Project_Closeout</fullName>
        <columns>Closeout_Request__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Public Assistance DAPS</label>
        <queue>Public_Assistance_DAPS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Public_Assistance_PM1_Project_Closeout</fullName>
        <columns>Closeout_Request__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Public Assistance PM1</label>
        <queue>Public_Assistance_PM1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Public_Assistance_PM2_PAO_Project_Closeout</fullName>
        <columns>Closeout_Request__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Public Assistance PM2/PAO</label>
        <queue>Public_Assistance_PM2_PAO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Public_Assistance_PM3_Project_Closeout</fullName>
        <columns>Closeout_Request__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Public Assistance PM3</label>
        <queue>Public_Assistance_PM3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ready_For_Closeout</fullName>
        <columns>NAME</columns>
        <columns>Closeout_Request__c</columns>
        <columns>Closeout_Task__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Project_Name__c</columns>
        <columns>IsSmallProject__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Closeout</value>
        </filters>
        <label>Ready For Closeout</label>
        <sharedTo>
            <group>Public_Assistance_PM1</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Request_for_Closeout</fullName>
        <columns>NAME</columns>
        <columns>Closeout_Request__c</columns>
        <columns>Closeout_Task__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Project_Name__c</columns>
        <columns>IsSmallProject__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Request for Closeout</value>
        </filters>
        <label>Request for Closeout</label>
        <sharedTo>
            <group>Public_Assistance_Analyst</group>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Closeout</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Closeouts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ProjectCloseoutShare__c</fullName>
        <label>ProjectCloseoutShare</label>
    </sharingReasons>
</CustomObject>